# furiosa-models

./: .gitignore  .gitmodules  404.html  Cargo.toml  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  artifact.toml  artifact.yaml  artifacts.py  artifacts.yaml  ci-constraints.txt  constraints.txt  index.html  latest  mkdocs.yml  pyproject.toml  requirements.txt  rust-toolchain.toml  setup.cfg  setup.py  sitemap.xml
.ci/: apply.sh  github-add-comment.yaml  label-trigger.yaml  pipeline.yaml  pr-trigger.yaml  task.yaml
.ci/furiosa-models-build/: build-and-push.yaml  lint.yaml  pipeline.yaml  pr-trigger.yaml
.ci/furiosa-models-ci/: build-and-push.yaml  lint.yaml  pipeline.yaml  pr-trigger.yaml  test.yaml
.ci/furiosa-models-regression-test/: label-trigger.yaml  regression-test.yaml
.ci/furiosa-models-test/: pipeline.yaml  task.yaml  test-trigger.yaml
.dvc/: config
.github/workflows/: deploy.yml  docs.yml  furiosa-models.yml  test.yml
PR-129/: 404.html  index.html  sitemap.xml
PR-129/changelog/: index.html
PR-129/command_tool/: index.html
PR-129/developer/: index.html
PR-129/developers-guide/: index.html
PR-129/examples/: resnet50.py  ssd_mobilenet_onnx.py
PR-129/getting_started/: index.html
PR-129/model_object/: index.html
PR-129/search/: search_index.json
PR-167/: 404.html  index.html  objects.inv  requirements.txt  sitemap.xml
PR-167/changelog/: index.html
PR-167/command_line_tool/: index.html
PR-167/command_tool/: index.html
PR-167/developers-guide/: index.html
PR-167/en/: index.html
PR-167/examples/: efficientnet_v2_s.py  serving.py  ssd_mobilenet_native.py  ssd_mobilenet_onnx.py  ssd_resnet34_native.py  yolov5m.py
PR-167/getting_started/: index.html
PR-167/ko/: index.html
PR-167/model_object/: index.html
PR-167/search/: search_index.json
PR-167/user_guide/: index.html
PR-173/: 404.html  index.html  objects.inv  sitemap.xml
PR-173/changelog/: index.html
PR-173/command_line_tool/: index.html
PR-173/developers-guide/: index.html
PR-173/examples/: ssd_mobilenet_onnx.py  yolov7_w6_pose.py
PR-173/getting_started/: index.html
PR-173/model_object/: index.html
PR-173/search/: search_index.json
PR-177/: 404.html  index.html  sitemap.xml
PR-177/changelog/: index.html
PR-177/command_line_tool/: index.html
PR-177/developers_guide/: index.html
PR-177/examples/: ssd_mobilenet_native.py
PR-177/getting_started/: index.html
PR-177/model_object/: index.html
PR-177/search/: search_index.json
PR-180/: 404.html  index.html  sitemap.xml
PR-180/changelog/: index.html
PR-180/command_line_tool/: index.html
PR-180/examples/: ssd_mobilenet.py
PR-180/getting_started/: index.html
PR-180/model_object/: index.html
PR-180/search/: search_index.json
PR-180/stylesheets/: extra.css
PR-181/command_line_tool/: index.html
PR-181/getting_started/: index.html
PR-181/search/: search_index.json
PR-182/: sitemap.xml
PR-182/command_line_tool/: index.html
PR-182/developers_guide/: index.html
PR-182/search/: search_index.json
PR-183/: 404.html  index.html  sitemap.xml
PR-183/changelog/: index.html
PR-183/examples/: ssd_resnet34_native.py
PR-183/getting_started/: index.html
PR-183/search/: search_index.json
PR-185/: 404.html  index.html
PR-185/changelog/: index.html
PR-185/developers_guide/: index.html
PR-185/getting_started/: index.html
PR-185/model_object/: index.html
PR-185/search/: search_index.json
PR-188/: index.html  objects.inv
PR-188/changelog/: index.html
PR-188/examples/: ssd_mobilenet_onnx.py
PR-188/search/: search_index.json
PR-88/: index.html  objects.inv  sitemap.xml
PR-88/changelog/: index.html
PR-88/cli/: index.html
PR-88/command_tool/: index.html
PR-88/examples/: resnet50_native.py  ssd_mobilenet_native.py  ssd_resnet34.py  ssd_resnet34_native.py  yolov5l.py  yolov5m.py
PR-88/getting_started/: index.html
PR-88/model_object/: index.html
PR-88/native_postprocessor/: index.html
PR-88/search/: search_index.json
blocking_and_nonblocking_api/: index.html
changelog/: index.html
docker/: Dockerfile  Dockerfile.base  Dockerfile.lint
docker/lint/: Dockerfile
docs/: blocking_and_nonblocking_api.md  changelog.md  cli.md  command_line_tool.md  command_tool.md  developer.md  developers-guide.md  developers_guide.md  getting_started.md  model_object.md  models.md  native_postprocessor.md  requirements.txt  user_guide.ipynb
docs/examples/: efficientnet_b0.py  efficientnet_v2_s.py  loading_model.py  loading_model_nonblocking.py  publish_model.py  resnet50.py  running_model.py  ssd_mobilenet.py  ssd_mobilenet_native.py  ssd_mobilenet_onnx.py  ssd_resnet34.py  ssd_resnet34_native.py  yolov5l.py  yolov5m.py  (+1 more)
examples/: loading_model.py  loading_model_nonblocking.py  ssd_mobilenet_native.py
licenses/: MLCOMMONS
models/: .gitignore  README.md  enf_generator.sh  mlcommons_resnet50_v1.5_int8.onnx.dvc  mlcommons_resnet50_v1.5_int8_truncated.onnx.dvc  mlcommons_ssd_mobilenet_v1_int8.onnx.dvc  mlcommons_ssd_mobilenet_v1_int8.onnx_truncated.onnx.dvc  mlcommons_ssd_resnet34_int8.onnx.dvc  yolov5l_int8.onnx.dvc  yolov5l_int8.yaml  yolov5m_int8.onnx.dvc
native_postprocessor/: index.html
scripts/: README.md  build_wheel.sh  test_mobilenetssd_small.py  test_resnet34.py  test_resnet50.py  test_ssd_mobilenet.py  test_ssd_mobilenet_v1.py  test_ssd_resnet34.py  test_yolov5l.py  test_yolov5m.py
search/: search_index.json
src/: common.rs  lib.rs  resnet50.rs  ssd_mobilenet.rs  ssd_resnet34.rs
tekton/: README.md  apply.sh  build-bot.yaml
tests/: __init__.py  test_artifacts.py  test_native_ssd_mobilenet.py  test_nms.py  test_resnet50.py  test_ssd_mobilenet.py  test_ssd_resnet34.py  test_sum_as_string.py  test_utils.py  test_yolov5l.py  test_yolov5m.py
v0.10.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.10.1/: 404.html  index.html
v0.10.1rc0/: 404.html  index.html  sitemap.xml
v0.10.2rc0/: sitemap.xml
v0.10.2rc2/: objects.inv
v0.8.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.9.0/: 404.html  index.html  objects.inv  sitemap.xml
(+416 files in other folders)
