[package]
name = "furiosa-models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "furiosa_models_vision_native"
crate-type = ["cdylib", "rlib"]

[dependencies]
mlperf-postprocess = { path = "thirdparty/mlcommons/postprocess" }
numpy = "0.16"
pyo3 = { version = "0.16.5", features = ["extension-module"] }