[package]
name = "furiosa-models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "furiosa_models_vision_native"
crate-type = ["cdylib", "rlib"]

[dependencies]
itertools = "0.10.3"
mlperf-postprocess = { git = "https://github.com/furiosa-ai/mlperf-postprocess", branch = "without_cpp" }
numpy = "0.16"
pyo3 = { version = "0.16.6", features = ["extension-module"] }
