[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "furiosa-models"
authors = [{ name = "FurioaAI Inc.", email = "pkg@furiosa.ai" }]
readme = "README.md"
license-files = { paths = ["LICENSE"] }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
description = "Furiosa Models"
requires-python = "~=3.7"
dynamic = ["version"]
dependencies = [
    "furiosa-common == 0.8.*",
    "furiosa-registry == 0.8.*",
    "furiosa-runtime == 0.8.*",
    "furiosa-native-postprocess ~= 0.2.2",

    "aiofiles ~= 22.1.0",
    "aiohttp ~= 3.8.3",
    "opencv-python-headless ~= 4.6",
    "timm ~= 0.4",
    "torch ~= 1.13",
    "torchvision ~= 0.14",
    "pydantic ~= 1.10",
    "tabulate ~= 0.9.0",
    "PyYAML ~= 6.0",

    "numpy ~= 1.21",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-benchmark == 4.0.0",
    "pytest-asyncio ~= 0.17.2",
    "pycocotools ~= 2.0.4",
]
dvc = [
    "dvc[s3]",
]

[project.scripts]
furiosa-models = "furiosa.models.client.main:main"

[project.urls]
Home = "https://furiosa.ai"
Documentation = "https://github.com/furiosa-ai/furiosa-models"
"Bug Tracker" = "https://github.com/furiosa-ai/furiosa-models/issues"
"Source Code" = "https://github.com/furiosa-ai/furiosa-models"

[tool.flit.module]
name = "furiosa.models"

[tool.flit.external-data]
directory = "furiosa/models/data"

[tool.pytest.ini_options]
addopts = "--benchmark-autosave"
asyncio_mode = "auto"

[tool.black]
skip-string-normalization = true
line-length = 100
target-version = ["py37", "py38", "py39"]
extend-exclude = """
(
  /generated/
  | /tests/assets/
  | /.dvc/
)
"""

[tool.isort]
force_sort_within_sections = true
known_first_party = ["furiosa"]
line_length = 100
profile = "black"
extend_skip_glob = ["**/generated/**", "tests/assets/**", ".dvc/**"]
