[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "furiosa-models"
authors = [{ name = "FurioaAI Inc.", email = "pkg@furiosa.ai" }]
readme = "README.md"
license-files = { paths = ["LICENSE"] }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
description = "Furiosa Models"
requires-python = "~=3.8"
dynamic = ["version"]
dependencies = [
    "furiosa-common == 0.10.*",
    "furiosa-device == 0.10.*",
    "furiosa-runtime == 0.10.*",
    "furiosa-native-postprocess == 0.9.0",

    "PyYAML",
    "numpy",
    "opencv-python-headless",
    "pydantic ~= 2.0",
    "requests",
    "tabulate",
    "torch",
    "typer",
]

[project.optional-dependencies]
test = [
    "onnx",
    "furiosa-serving == 0.10.*",
    "furiosa-quantizer == 0.10.*",

    "nbmake",
    "pycocotools ~= 2.0.4",
    "pytest",
    "pytest-asyncio ~= 0.17.2",
    "pytest-benchmark == 4.0.0",
    "torchvision",
]
dvc = ["dvc[s3]"]
serving = ["furiosa-serving == 0.10.*"]
full = [
    "dvc[s3]",
    "onnx",
    "furiosa-serving == 0.10.*",
    "furiosa-quantizer == 0.10.*",
]

[project.scripts]
furiosa-models = "furiosa.models.cli.main:app"

[project.urls]
Home = "https://furiosa.ai"
Documentation = "https://furiosa-ai.github.io/furiosa-models/latest/"
"Bug Tracker" = "https://github.com/furiosa-ai/furiosa-models/issues"
"Source Code" = "https://github.com/furiosa-ai/furiosa-models"

[tool.flit.module]
name = "furiosa.models"

[tool.flit.sdist]
exclude = [
    '.dvc',
    '.dvcignore',
    '.github',
    '.gitignore',
    'Makefile',
    'ci-constraints.txt',
    'docker',
    'docs',
    'mkdocs.yml',
    'tekton',
    'tests',
]

[tool.pytest.ini_options]
addopts = "--benchmark-autosave"
asyncio_mode = "auto"

[tool.black]
skip-string-normalization = true
line-length = 100
target-version = ["py38", "py39", "py310"]
extend-exclude = """
(
  /generated/
  | /tests/assets/
  | /.dvc/
)
"""

[tool.isort]
force_sort_within_sections = true
known_first_party = ["furiosa"]
line_length = 100
profile = "black"
extend_skip_glob = ["**/generated/**", "tests/assets/**", ".dvc/**"]

[tool.ruff]
line-length = 100
